Commit: Api file structure

--- a/Purpleflix/Purpleflix/Info.plist
+++ b/Purpleflix/Purpleflix/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>ThemoviedbApiKey</key>
+	<string>7911efaff299417d3878f6c9be101350</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
